# weaveflow

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  build.rs  mock_etl_demo.yaml  package-lock.json  pdf_extract_images.js  pdf_extract_png.yaml  pdf_ocr.yaml  pdf_ocr_v2.yaml
.github/workflows/: ci.yml
benches/: builtin_vs_js.rs  etl.rs  iterate_batch.rs  operator_chain.rs  parallel_layer.rs  shared.rs  var_passthrough.rs
docs/: README.md  agent.md  api.md  architecture.md  design.md  dsl.md  guide.md  operators.md  security.md
scripts/: bench_ecomm_mongo.js  bench_etl.sh  bench_js_with_mongo.js  bench_js_with_node.js
skills/weaveflow/: SKILL.md
skills/weaveflow/references/: agent.md  api.md  dsl.md  guide.md
src/: error.rs  lib.rs  main.rs
src/cli/: client.rs  config.rs  daemon.rs  mcp.rs  mod.rs  watch.rs
src/dsl/: mod.rs  parser.rs  pipeline.rs  raw.rs  retry.rs  rule.rs  schema.rs  step.rs  step_op.rs  storage.rs  validator.rs  variable.rs
src/engine/: cache.rs  dag.rs  iterate.rs  mod.rs  runner.rs  step.rs
src/operator/: mod.rs  registry.rs  types.rs
src/operator/builtin/: base64.rs  command.rs  dedup.rs  file.rs  filter.rs  fork.rs  http.rs  http_client.rs  js.rs  llm.rs  merge.rs  mod.rs  noop.rs  sort.rs  split.rs  var.rs
src/quickjs/: mod.rs  runtime.rs
src/routine/: mod.rs
src/runtime/: dag.rs  executor.rs  mod.rs
src/server/: daemon.rs  logging.rs  mod.rs  routine.rs  trigger.rs
src/store/: database.rs  mod.rs  object.rs
src/task/: mod.rs  progress.rs  scope.rs  snapshot.rs  tracker.rs
src/tracker/: meta.rs  mod.rs  snapshot.rs  state.rs  tracker.rs
src/trigger/: mod.rs
src/vm/: mod.rs  resolver.rs  scope.rs
tests/: after_ordering_dependency.rs  array_index_path.rs  base64_encode_decode_roundtrip.rs  bench_verify.rs  cache_control.rs  dedup_operator_by_field.rs  empty_array_input.rs  env_redact.rs  env_variable_resolution.rs  file_operator.rs  filter_operator_gt.rs  filter_operator_in.rs  filter_then_sort_then_dedup_chain.rs  fstring_template.rs  hex_digest_deep_field_access.rs  hex_digest_field_access.rs  iterate_as_binding.rs  js_code_template.rs  merge_literal_inputs_key.rs  merge_operator_deep.rs  merge_operator_objects.rs  noop_output.rs  null_slot_value.rs  output_step_field_ref.rs  pipeline_output_json.rs  retry.rs  slot_required.rs  sort_operator_asc.rs  sort_operator_desc.rs  split_operator_chunks.rs  step_timeout.rs  unknown_operator_fails_validation.rs  var_operator_holds_data.rs
tests/common/: mod.rs
