[package]
name = "weave"
version = "1.0.0"
edition = "2024"
description = "DAG batch processing engine — YAML pipelines, Rust execution, single binary"

[dependencies]
axum = { version = "0.7", features = ["macros", "json", "ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
regex = "1"
async-trait = "0.1"
sha2 = "0.10"
jsonschema = { version = "0.19", default-features = false }
im = { version = "15", features = ["serde"] }
bytes = { version = "1", features = ["serde"] }
redb = "2"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
dirs-next = "2"
base64 = "0.22"
tokio-tungstenite = "0.24"
tungstenite = "0.24"
flexbuffers = "25"
rquickjs = "0.12"
clap = { version = "4", features = ["derive", "env"] }
libc = "0.2"
rayon = "1"
flate2 = "1"



[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "etl"
harness = false
