[package]
name = "weaveflow"
version = "2.0.0"
edition = "2024"
description = "DAG batch processing engine — YAML pipelines, Rust execution, single binary"
license = "AGPL-3.0-only"
repository = "https://github.com/RuofengX/weaveflow"
readme = "README.md"
keywords = ["dag", "pipeline", "batch", "etl", "workflow"]
categories = ["command-line-utilities", "web-programming"]
exclude = [
    ".vscode/",
    "scripts/",
    "skills/",
    "package.json",
    "package-lock.json",
    "node_modules/",
]

[dependencies]
axum = { version = "0.7", features = ["macros", "json", "ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-yaml = { version = "1.1.0", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
async-trait = "0.1"
sha2 = "0.10"
jsonschema = { version = "0.19", default-features = false }
redb = "2"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
dirs-next = "2"
base64 = "0.22"
tokio-tungstenite = "0.24"
tungstenite = "0.24"
rquickjs = "0.12"
clap = { version = "4", features = ["derive", "env"] }
libc = "0.2"
rayon = "1"
flate2 = "1"
cron = "0.15"
toml = "0.8"
rmcp = { version = "2.2.0", features = ["server", "transport-io", "schemars"] }
schemars = "1.2.1"



[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "iterate_batch"
harness = false

[[bench]]
name = "builtin_vs_js"
harness = false

[[bench]]
name = "operator_chain"
harness = false

[[bench]]
name = "parallel_layer"
harness = false

[[bench]]
name = "var_passthrough"
harness = false
